# astrynn-devforge-gpt

./: .env.example  .gitignore  README.md  VERIFICATION.md  setup.cfg  test_core.py
.github/scripts/: block0_verify.py  block0_verify_negative.py  block0_verify_remaining.py  block0_verify_restart.py
.github/workflows/: block0-human-verification.yml  block0-negative-verification.yml  block0-readme-cleanroom.yml  block0-remaining-endpoints.yml  block0-restart-persistence.yml  ci.yml
docs/: AEGIS_CLEARANCE_API_V0_4.md  AEGIS_CLEARANCE_V0_1.md  ARCHITECTURE.md  ARIA_TEST_REGISTER_V0_1.md  ATLAS_BRIEFING_API_V0_5.md  AUTH_RBAC_V0_2.md  BUILD_CONTROL_ORBYN_ATLAS_AEGIS.md  BUILD_STATUS.md  MVP_SCOPE.md  OAAA_AGENT_BLUEPRINT_API_V0_6.md  OAAA_AGENT_BLUEPRINT_V0_1.md  ORBYN_ATLAS_CASE_V0_1.md  ORBYN_SIGNAL_DEPTH_ROADMAP.md  OUTPUT_VAULT_V0_1.md  PERSISTENCE_POSTGRES_SUPABASE_V0_3.md  PRIVATE_API_V0_1.md  SECURITY_AND_APPROVAL_GATES.md  VIGILANCE_PERMISSIONS_LAYER_V0_1.md
docs/adr/: 0001-implementation-architecture.md  0001-repository-and-stack.md  ADR-001-orbyn-signal-depth-integration.md
docs/verification/: BLOCK0_FIRST_8_ENDPOINTS_2026-07-16.md  (+5 more)
examples/: atlas_demo.py  oaaa_blueprint_demo.py  output_vault_demo.py  vigilance_demo.py
tasks/: BACKLOG.md
tests/: test_aegis.py  test_aegis_api.py  test_aegis_clearance.py  test_api.py  test_api_persistence.py  test_aria.py  test_atlas.py  test_atlas_api.py  test_auth.py  test_kernel.py  test_oaaa_api.py  test_oaaa_blueprint.py  test_output_vault.py  test_sqlalchemy_repository.py  test_vigilance.py
(+58 files in other folders)
