[metadata]
name = astrynn-devforge-gpt
version = 0.2.0
description = Governed operational intelligence and AI assurance platform

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    fastapi>=0.115,<1.0
    pydantic>=2.9,<3.0
    uvicorn[standard]>=0.30,<1.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    httpx>=0.27,<1.0
    pytest>=8.0,<9.0
    ruff>=0.6,<1.0
