[metadata]
name = astrynn-devforge-gpt
version = 0.3.0

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    fastapi>=0.115,<1.0
    pydantic>=2.8,<3.0
    uvicorn>=0.30,<1.0
    httpx>=0.27,<1.0
    sqlalchemy>=2.0,<3.0
    psycopg[binary]>=3.2,<4.0

[options.packages.find]
where = src
